add nodle node and dev container
(cherry picked from commit a63d283533f05db182fb1309663b32b73a46bde8)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,5 +7,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 RUN useradd -ms /bin/bash codespace
 USER codespace
 WORKDIR /home/codespace
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y && \
-        export PATH=$PATH:$HOME/.cargo/bin
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+
+COPY ./.devcontainer/init.sh .
+ENTRYPOINT [ "./init.sh" ]
