--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,9 @@
 {
-    "build": {
-        "dockerfile": "Dockerfile"
-    }
+    "name": "Nodle Chain",
+    "dockerComposeFile": [
+        "../docker-compose.yml",
+        "docker-compose.extend.yml"
+    ],
+    "service": "dev",
+    "shutdownAction": "stopCompose"
 }
