correct dev script
(cherry picked from commit ddf8d71a1685647cd01ba66d4302038f5fb39b3f)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
         "all",
         "--alice",
         "--chain",
-        "acala-dev",
+        "eden-dev",
         "--",
         "--chain",
         "rococo-dev"
@@ -59,4 +59,4 @@ services:
     environment:
       - WS_URL=ws://node-nodle:9944
     ports:
-      - 8080:80
+      - 8081:80
