--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -18,15 +18,7 @@ name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
-default = ["cli"]
-cli = [
-	"sc-cli",
-	"frame-benchmarking-cli",
-	"substrate-frame-cli",
-	"sc-service/db",
-	"structopt",
-	"substrate-build-script-utils",
-]
+default = ["cli", "polkadot-cli/rococo-native"]
 runtime-benchmarks = [
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
@@ -36,16 +28,16 @@ runtime-benchmarks = [
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.12" }
 sc-executor = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.12" }
 sc-service = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.12" }
 sp-trie = { git = "https://github.com/paritytech/substrate", features = [
-	"memory-tracker"
+	"memory-tracker",
 ], branch = "polkadot-v0.9.12" }
 
 [dependencies]
@@ -57,10 +49,12 @@ env_logger = "0.9.0"
 futures = { version = "0.3.18", features = ["compat"] }
 jsonrpc-core = "18.0.0"
 serde = { version = "1.0.129", features = ["derive"] }
-parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
+parity-scale-codec = { version = "2.2.0", default-features = false, features = [
+	"derive",
+] }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
-pallet-contracts = { git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.12" }
+pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
@@ -77,13 +71,13 @@ sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branc
 sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
-sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12"}
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
-sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12"}
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
@@ -140,8 +134,8 @@ polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branc
 structopt = "0.3.22"
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.12", optional = true }
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
 cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.12" }
-substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true}
+substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
