--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu
 
 USER root
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends cmake pkg-config libssl-dev git clang build-essential curl ca-certificates gnupg \
+    && apt-get -y install --no-install-recommends cmake pkg-config libssl-dev git clang build-essential curl ca-certificates gnupg netcat \
     && curl -L https://deb.nodesource.com/setup_16.x | bash \
     && apt-get update -y \
     && apt-get -y install nodejs \
@@ -11,8 +11,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 RUN useradd -ms /bin/bash codespace
 USER codespace
-WORKDIR /home/codespace
+WORKDIR /workspace
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
 
-COPY ./.devcontainer/init.sh .
-ENTRYPOINT [ "./init.sh" ]
+COPY ./.devcontainer/init.sh /init.sh
+ENTRYPOINT [ "/init.sh" ]
