--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,6 @@
         "docker-compose.extend.yml"
     ],
     "service": "dev",
-    "shutdownAction": "stopCompose"
+    "shutdownAction": "stopCompose",
+    "workspaceFolder": "/workspace"
 }
