use exported raw chain spec

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,12 @@ services:
         "--validator",
         "--alice",
         "--chain",
-        "rococo-local",
+        "/workspace/.maintain/relay.json",
         "--node-key",
         "0000000000000000000000000000000000000000000000000000000000000001"
       ]
+    volumes:
+      - .:/workspace:cached
 
   node-polkadot-bob:
     container_name: node-polkadot-bob
@@ -42,11 +44,13 @@ services:
         "--validator",
         "--bob",
         "--chain",
-        "rococo-local",
+        "/workspace/.maintain/relay.json",
         "--bootnodes",
         "/dns4/node-polkadot-alice/tcp/30333/p2p/12D3KooWEyoppNCUx8Yx66oV9fJn\
           riXwCcXwDDUA2kj6vnc6iDEp"
       ]
+    volumes:
+      - .:/workspace:cached
 
   node-nodle-alice:
     container_name: node-nodle-alice
@@ -70,11 +74,13 @@ services:
         "2000",
         "--",
         "--chain",
-        "rococo-local",
+        "/workspace/.maintain/relay.json",
         "--bootnodes",
         "/dns4/node-polkadot-alice/tcp/30333/p2p/12D3KooWEyoppNCUx8Yx66oV9fJn\
           riXwCcXwDDUA2kj6vnc6iDEp"
       ]
+    volumes:
+      - .:/workspace:cached
 
   ui-polkadot:
     container_name: ui-polkadot
