--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,7 +10,7 @@ name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
-default = ["cli", "polkadot-cli/rococo-native"]
+default = ["cli"]
 runtime-benchmarks = [
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
