use exported raw chain spec
(cherry picked from commit 2c28d7cd0897e0e266cae1bb7e692fc28f03b1a7)

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -18,7 +18,7 @@ name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
-default = ["cli", "polkadot-cli/rococo-native"]
+default = ["cli"]
 runtime-benchmarks = [
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
