--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
-name = "eden-runtime"
+name = "runtime-eden"
 version = "2.0.13"
 
 [features]
