--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -5,31 +5,26 @@ edition = "2018"
 name = "nodle-chain"
 version = "2.0.14"
 
-[package.metadata.wasm-pack.profile.release]
-# `wasm-opt` has some problems on linux, see
-# https://github.com/rustwasm/wasm-pack/issues/781 etc.
-wasm-opt = false
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
-
 [[bin]]
 name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
 default = ["cli"]
+cli = [
+	"sc-cli",
+	"frame-benchmarking-cli",
+	"substrate-frame-cli",
+	"sc-service/db",
+	"structopt",
+	"substrate-build-script-utils",
+]
 runtime-benchmarks = [
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
+	"runtime-eden/runtime-benchmarks",
 	"frame-benchmarking-cli",
 ]
-cli = ["sc-executor/wasmi-errno"]
-
-[package.metadata.wasm-pack.profile.release]
-# `wasm-opt` has some problems on linux, see
-# https://github.com/rustwasm/wasm-pack/issues/781 etc.
-wasm-opt = false
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
@@ -54,8 +49,9 @@ env_logger = "0.9.0"
 futures = { version = "0.3.18", features = ["compat"] }
 jsonrpc-core = "18.0.0"
 serde = { version = "1.0.129", features = ["derive"] }
+parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
-frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12"}
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
 pallet-contracts = { git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.12" }
 pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
@@ -65,7 +61,7 @@ frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate"
 pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
-sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12"}
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
 sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
@@ -110,9 +106,9 @@ sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkad
 sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
 primitives = { path = "../primitives" }
-main-runtime = { path = "../runtimes/main" }
-staking-runtime = { path = "../runtimes/staking" }
-eden-runtime = { path = "../runtimes/eden" }
+runtime-main = { path = "../runtimes/main" }
+runtime-staking = { path = "../runtimes/staking" }
+runtime-eden = { path = "../runtimes/eden" }
 pallet-root-of-trust-rpc = { path = "../pallets/root-of-trust/rpc" }
 pallet-staking = { default-features = false, path = "../pallets/staking" }
 
@@ -134,9 +130,10 @@ polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branc
 
 [build-dependencies]
 structopt = "0.3.22"
-frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
 	"wasmtime"
-], branch = "polkadot-v0.9.12" }
-substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
+], branch = "polkadot-v0.9.12", optional = true }
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
 cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.12" }
+substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true}
