fix node cargo toml

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -19,6 +19,14 @@ path = "src/main.rs"
 
 [features]
 default = ["cli"]
+cli = [
+	"sc-cli",
+	"frame-benchmarking-cli",
+	"substrate-frame-cli",
+	"sc-service/db",
+	"structopt",
+	"substrate-build-script-utils",
+]
 runtime-benchmarks = [
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
