--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
         "eden-dev",
         "--parachain-id",
         "2000",
+        "--force-authoring",
         "--",
         "--chain",
         "/workspace/.maintain/relay.json",
