--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ on: [ push, release ]
 jobs:
 
   container_gpr:
-    name: Push Docker image to GitHub Packages
+    name: Build and push docker image
     runs-on: ubuntu-latest
 
     steps:
