--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,10 @@
 {
     "build": {
-        "dockerfile": "Dockerfile"
-    }
+        "dockerfile": "Dockerfile",
+        "context": ".."
+    },
+    "forwardPorts": [
+        9944,
+        9988
+    ]
 }
