chore: do CI test on all pull_request but only redo it for a push to the master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: Test rust code
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 env:
   nightly: nightly-2021-11-01
