test(wnodl): build and run the very first simplest test

--- a/pallets/wnodl/Cargo.toml
+++ b/pallets/wnodl/Cargo.toml
@@ -22,6 +22,7 @@ sp-std = { git = "https://github.com/paritytech/substrate", default-features = f
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
 
 [features]
 default = ["std"]
@@ -31,6 +32,7 @@ std = [
 	"ethereum-types/std",
 	"sp-runtime/std",
 	"sp-std/std",
+	"pallet-balances/std",
 	"frame-support/std",
 	"frame-system/std",
 	"frame-benchmarking/std",
