--- a/pallets/wnodl/Cargo.toml
+++ b/pallets/wnodl/Cargo.toml
@@ -20,9 +20,12 @@ sp-runtime = { git = "https://github.com/paritytech/substrate", default-features
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
 
+support = { path = "../../support" }
+
 [dev-dependencies]
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
+pallet-reserve = { path = "../../pallets/reserve", default-features = false }
 
 [features]
 default = ["std"]
@@ -33,10 +36,15 @@ std = [
 	"sp-runtime/std",
 	"sp-std/std",
 	"pallet-balances/std",
+    "pallet-reserve/std",
 	"frame-support/std",
 	"frame-system/std",
 	"frame-benchmarking/std",
 ]
 
-runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
+runtime-benchmarks = [
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+]
 try-runtime = ["frame-support/try-runtime"]
