take out tcr and root-of-trust

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -35,16 +35,16 @@ try-runtime = [
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.17" }
 sc-executor = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.17" }
 sc-service = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.17" }
 sp-trie = { git = "https://github.com/paritytech/substrate", features = [
-	"memory-tracker"
+	"memory-tracker",
 ], branch = "polkadot-v0.9.17" }
 
 [dependencies]
@@ -57,10 +57,12 @@ env_logger = "0.9.0"
 futures = { version = "0.3.19", features = ["compat"] }
 jsonrpc-core = "18.0.0"
 serde = { version = "1.0.133", features = ["derive"] }
-parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
+parity-scale-codec = { version = "2.2.0", default-features = false, features = [
+	"derive",
+] }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
-pallet-contracts = { git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.17" }
+pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
@@ -77,13 +79,13 @@ sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branc
 sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
-sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17"}
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
-sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17"}
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
@@ -119,7 +121,6 @@ primitives = { path = "../primitives" }
 runtime-main = { path = "../runtimes/main" }
 runtime-staking = { path = "../runtimes/staking" }
 runtime-eden = { path = "../runtimes/eden" }
-pallet-root-of-trust-rpc = { path = "../pallets/root-of-trust/rpc" }
 pallet-staking = { default-features = false, path = "../pallets/staking" }
 
 # Cumulus dependencies
@@ -142,9 +143,9 @@ polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branc
 structopt = "0.3.22"
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
-	"wasmtime"
+	"wasmtime",
 ], branch = "polkadot-v0.9.17", optional = true }
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
 cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
-substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true}
+substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
 try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
