--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -30,11 +30,8 @@ std = [
   "pallet-poa/std",
   "pallet-randomness-collective-flip/std",
   "pallet-reserve/std",
-  "pallet-root-of-trust/std",
-  "pallet-root-of-trust-runtime-api/std",
   "pallet-scheduler/std",
   "pallet-session/std",
-  "pallet-tcr/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
   "pallet-transaction-payment-rpc-runtime-api/std",
@@ -88,9 +85,7 @@ runtime-benchmarks = [
   "pallet-im-online/runtime-benchmarks",
   "pallet-multisig/runtime-benchmarks",
   "pallet-reserve/runtime-benchmarks",
-  "pallet-root-of-trust/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
-  "pallet-tcr/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
@@ -107,17 +102,17 @@ try-runtime = [
 
 [dependencies]
 static_assertions = "1.1.0"
-getrandom = { version = "0.2", features = [
-	"js"
-] }
+getrandom = { version = "0.2", features = ["js"] }
 safe-mix = { version = "1.0.1", default-features = false }
 parity-scale-codec = { version = "2.2.0", default-features = false, features = [
-	"derive"
+  "derive",
 ] }
 serde = { version = "1.0.133", optional = true, features = ["derive"] }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.17" }
-frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.17" }
+scale-info = { version = "1.0", default-features = false, features = [
+  "derive",
+] }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.17" }
+frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.17" }
 frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }
@@ -174,10 +169,7 @@ frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-f
 primitives = { default-features = false, path = "../../primitives" }
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../../pallets/amendments" }
-pallet-tcr = { default-features = false, path = "../../pallets/tcr" }
 pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
-pallet-root-of-trust = { default-features = false, path = "../../pallets/root-of-trust" }
-pallet-root-of-trust-runtime-api = { default-features = false, path = "../../pallets/root-of-trust/rpc/runtime-api" }
 pallet-poa = { default-features = false, path = "../../pallets/poa" }
 pallet-emergency-shutdown = { default-features = false, path = "../../pallets/emergency-shutdown" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
