--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -48,6 +48,7 @@ sp-trie = { git = "https://github.com/paritytech/substrate", features = [
 ], branch = "polkadot-v0.9.17" }
 
 [dependencies]
+clap = { version = "3.1", features = ["derive"] }
 log = { version = "0.4.14", default-features = false }
 hex-literal = "0.3.4"
 structopt = { version = "0.3.22", optional = true }
@@ -132,6 +133,8 @@ cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", br
 cumulus-client-network = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
 cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
 cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
+cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
+cumulus-relay-chain-local = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
 
 # Polkadot dependencies
 polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.17" }
