--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -143,7 +143,8 @@ polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "r
 polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.17" }
 
 [build-dependencies]
-structopt = "0.3.22"
+clap = "3.1"
+clap_complete = "3.1"
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
 	"wasmtime",
