simplify build script and cargo.toml

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,21 +10,11 @@ name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
-default = ["cli"]
-cli = [
-	"sc-cli",
-	"frame-benchmarking-cli",
-	"substrate-frame-cli",
-	"sc-service/db",
-	"structopt",
-	"substrate-build-script-utils",
-	'try-runtime-cli',
-]
+default = []
 runtime-benchmarks = [
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
 	"runtime-eden/runtime-benchmarks",
-	"frame-benchmarking-cli",
 ]
 try-runtime = [
 	"runtime-main/try-runtime",
@@ -51,7 +41,7 @@ sp-trie = { git = "https://github.com/paritytech/substrate", features = [
 clap = { version = "3.1", features = ["derive"] }
 log = { version = "0.4.14", default-features = false }
 hex-literal = "0.3.4"
-structopt = { version = "0.3.22", optional = true }
+structopt = { version = "0.3.22" }
 serde_json = "1.0.71"
 trie-root = "0.16.0"
 env_logger = "0.9.0"
@@ -62,7 +52,7 @@ parity-scale-codec = { version = "2.2.0", default-features = false, features = [
 	"derive",
 ] }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
-frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
@@ -72,7 +62,7 @@ frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate"
 pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
-sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
@@ -116,7 +106,7 @@ sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polka
 sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
-frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
 primitives = { path = "../primitives" }
 runtime-main = { path = "../runtimes/main" }
@@ -143,13 +133,13 @@ polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "r
 polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.17" }
 
 [build-dependencies]
-clap = "3.1"
+clap = { version = "3.1", features = ["derive"] }
 clap_complete = "3.1"
-frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 sc-cli = { git = "https://github.com/paritytech/substrate", features = [
 	"wasmtime",
-], branch = "polkadot-v0.9.17", optional = true }
-substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+], branch = "polkadot-v0.9.17" }
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.17" }
-substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
