fix runtime benchmarks

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 [features]
 default = []
 runtime-benchmarks = [
+	"polkadot-service/runtime-benchmarks",
 	"runtime-main/runtime-benchmarks",
 	"runtime-staking/runtime-benchmarks",
 	"runtime-eden/runtime-benchmarks",
