Use nodle-staking as archive binary name
Co-authored-by: Eliott Teissonniere <10683430+ETeissonniere@users.noreply.github.com>

--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -71,5 +71,5 @@ jobs:
     - name: Archive Binary
       uses: actions/upload-artifact@v2
       with:
-        name: nodle-main
+        name: nodle-staking
         path: ./target/release/nodle-staking
