refactor: rename "node: to "nodes" and decompose "res" folder
Also specify --bin for cargo run

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
 [workspace]
 members = [
-  "node/main",
-  "node/staking",
-  "node/parachain",
+  "nodes/*",
   "pallets/*",
   "primitives",
   "runtimes/*",
