fix(CI): limit tarpaulin test to nodle-main to avoid the issue with polkadot-cli in parachain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       uses: actions-rs/tarpaulin@v0.1
       with:
         version: ${{ env.tarpaulin-vers }}
-        args: '--avoid-cfg-tarpaulin --verbose --all-features --workspace --timeout 120'
+        args: '--avoid-cfg-tarpaulin --verbose --all-features --bin nodle-main --timeout 120'
 
     - name: Upload to Codecov
       uses: codecov/codecov-action@v2.0.3
