--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        runtime: ["main", "eden"]
+        runtime: ["eden"]
 
     steps:
       - uses: actions/checkout@v2
