--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -23,6 +23,7 @@ std = [
   "pallet-emergency-shutdown/std",
   "pallet-grants/std",
   "pallet-im-online/std",
+  "pallet-mandate/std",
   "pallet-membership/std",
   "pallet-multisig/std",
   "pallet-offences/std",
@@ -173,6 +174,7 @@ pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
 pallet-poa = { default-features = false, path = "../../pallets/poa" }
 pallet-emergency-shutdown = { default-features = false, path = "../../pallets/emergency-shutdown" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
+pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
