fix launch config

--- a/launch.json
+++ b/launch.json
@@ -41,16 +41,12 @@
         {
             "bin": "./target/release/nodle-parachain",
             "id": "1000",
+            "chain": "dev",
             "nodes": [
                 {
                     "wsPort": 9988,
                     "port": 31200,
-                    "name": "alice",
-                    "chain": "dev",
-                    "flags": [
-                        "--",
-                        "--execution=wasm"
-                    ]
+                    "name": "alice"
                 }
             ]
         }
