staking production config
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -24,6 +24,7 @@ std = [
 	"sp-staking/std",
 	"pallet-authorship/std",
 	"pallet-session/std",
+	"pallet-reserve/std",
 	"frame-benchmarking/std",
 	"log/std",
 ]
@@ -48,6 +49,7 @@ pallet-authorship = { git = "https://github.com/paritytech/substrate", default-f
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
 sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
+pallet-reserve = { default-features = false, path = "../reserve", optional = true }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
